--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://greenzone-solutions-inc.workable.com/j/E42C858D8A'>GreenZone Solutions, Inc. - Jobs: Security Policy Analyst - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/forethought/373b3f71-2212-467b-87f1-8b42ba50853a'>Forethought - Security Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
@@ -55,7 +59,7 @@
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/udemy/0388204d-3530-40cb-83ef-7453e8a935f1'>Udemy - Senior Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/udemy/0388204d-3530-40cb-83ef-7453e8a935f1'>Udemy - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -129,7 +133,7 @@ pioneered an agentless approach to network security to address the explosive?...
 <p>1 day ago ... Job Title: Security Engineer III. Summary of Position: The Security Engineer III will
 , Under general supervision, performs a wide variety of duties in support of?...</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_santeecooper/external/jobDetails.do?functionName=getJobDetail&jobPostId=4641&localeCode=en-us'>Security Analyst III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_santeecooper/external/jobDetails.do?functionName=getJobDetail&jobPostId=4641&localeCode=en-us'>Security Analyst III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Position Description Demonstrates in-depth knowledge of corporate IT security 
 initiatives and risk management activities. Utilizes knowledge of industry best?...</p>
@@ -177,7 +181,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEcRVLwS'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEcRVLwS'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -197,7 +201,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WabashValleyPower/743999689407037-senior-cyber-security-analyst'>Wabash Valley Power Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WabashValleyPower/743999689407037-senior-cyber-security-analyst'>Wabash Valley Power Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -254,7 +258,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -311,7 +315,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692196003-security-systems-analyst-ts-clearance-security-must-'>Arthur Grand Technologies Inc Security Systems Analyst ( TS clearance & security + must) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692196003-security-systems-analyst-ts-clearance-security-must-'>Arthur Grand Technologies Inc Security Systems Analyst ( TS clearance & security + must) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -343,7 +347,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -379,7 +383,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -453,10 +457,6 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/4tryot1s1dtudztboke6nxntkw'>Security Architect  | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/aewtmybow96skb6659d8yt6a7a'>Security Architect  | JFR Staffing</a></h5> 
-<p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
