--- a/devops.html
+++ b/devops.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nutanix/job/o1xDafw5'>Nutanix Careers - MTS - DevOps Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/nutanix/job/o1xDafw5'>Nutanix Careers - MTS - DevOps Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -133,17 +133,17 @@ Solutions Architect - Associate, AWS Certified DevOps Professional. PERSONAL
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk03fzy/'>
+<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk03fzy/'>
     0722 - Sr DevOps Engineer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oYSzafwj&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUpgWLwL'>Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oYSzafwj&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUpgWLwL'>Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oJv39fwa&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=ntngWLwi'>MORI Associates, Inc. Careers - Linux Systems Administrator - DevOps - Nasa/JPL</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oJv39fwa&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=ntngWLwi'>MORI Associates, Inc. Careers - Linux Systems Administrator - DevOps - Nasa/JPL</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -151,7 +151,7 @@ Solutions Architect - Associate, AWS Certified DevOps Professional. PERSONAL
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-devops-engineer-13058'>Senior DevOps Engineer - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-devops-engineer-13058'>Senior DevOps Engineer - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... As a Senior DevOps Engineer, you will be part of the Global Cloud and Platform 
 Services Team responsible for engineering, enhancing and transforming our?...</p>
@@ -187,7 +187,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of DevOps Engineer at Skylight.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://everledger.workable.com/j/54F81B3355'>DevOps Engineer - Apply online - Everledger - Jobs</a></h5> 
+<h5><a href='https://everledger.workable.com/j/54F81B3355'>DevOps Engineer - Apply online - Everledger - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of DevOps Engineer at Everledger.</p>
 <hr/>
@@ -199,7 +199,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of DevOps Database Engineer at Tech Firefly.</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/devopsdna/search?locationState=ca&amp;location=sunnyvale'>RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/devopsdna/search?locationState=ca&amp;location=sunnyvale'>RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA San Jose, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -249,7 +249,7 @@ excited by our goal of infrastructure as code to work closely with our product a
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/272109-devops-programmer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/272109-devops-programmer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -267,7 +267,7 @@ Additional?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999691363958-devops-lead'>GBM DevOps Lead | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999691363958-devops-lead'>GBM DevOps Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -313,7 +313,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -321,7 +321,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://artificialsolutions46581.recruiterbox.com/jobs/fk03fby/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artificialsolutions46581.recruiterbox.com/jobs/fk03fby/'>
     DevOps Engineer (Software Development) at Artificial Solutions
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -414,7 +414,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=obB08fwE&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nuWSTKwq'>Cirrus Logic Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=obB08fwE&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nuWSTKwq'>Cirrus Logic Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
